--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,10 @@
 }
 
 .App-header {
-  background-color: #3f7192;
+  background-color: #fafafa;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
 }
 
 .App-link {
